# NeuroCore

./: .env.example  .env.reporting-provider.example  .env.security-operator.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ingest-profiles.json.example  preferences.json.example  pyproject.toml  secrets.json.example  start.sh
.claude/commands/: README.md  cleanup-audit.md  create-ssd-implementation.md  error.md  evaluate.md  fix.md  git.md  notify-done.md  optimize-codebase.md  other.md  refine.md  sentrux.md  suggest.md  tdd.md  update.md
.github/: module-metadata.schema.json  pull_request_template.md
.github/workflows/: repo-gate.yml
.sentrux/: baseline.json  rules.toml
dashboards/: README.md
dashboards/_template/: README.md  metadata.json
docs/: ai-assisted-setup.md  security.md  setup.md  troubleshooting.md
docs/ssd/: architecture.md  implementation-plan.md  source-matrix.md  specification.md
docs/templates/: setup-guide-template.md
extensions/: README.md
extensions/_template/: README.md  metadata.json
integrations/: README.md
integrations/_template/: README.md  metadata.json
integrations/chat-capture/: README.md  metadata.json
integrations/claude-desktop-mcp/: .env.example  README.md  connector.py  metadata.json
integrations/discord-connector/: .env.example  README.md  connector.py  metadata.json
integrations/discord-starter/: README.md  metadata.json
integrations/slack-connector/: .env.example  README.md  connector.py  metadata.json
integrations/slack-starter/: README.md  metadata.json
primitives/: README.md
primitives/_template/: README.md  metadata.json
recipes/: README.md
recipes/_template/: README.md  metadata.json
schemas/: README.md
scripts/: bootstrap.py  mock_openai_compatible.py  neurocore_checkout.py  security_workflow.py  validate_checkout.py
skills/: README.md
(+109 files in other folders)
